--- a/src/tests/Doc_MiniProject_PipeNet.ipynb
+++ b/src/tests/Doc_MiniProject_PipeNet.ipynb
@@ -4,60 +4,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Mini Project\n",
+    "# Mini Project - PipeNet\n",
     "\n",
-    "`pyuppaal` can help you do most things that you can do with UPPAAL GUI. Basic coding flow is:\n",
-    "\n",
-    "1. load a .xml model, just like you open a model in UPPAAL GUI;\n",
-    "2. set the queries, just like you edit the queries in UPPAAL GUI;\n",
-    "3. verify all the queries, just like you click the \"Verify\" button in UPPAAL GUI.\n",
-    "\n",
-    "In addition to the above, you can also\n",
-    "\n",
-    "4. load a .xtr trace, and get the formatted structure;\n",
-    "5. add templates, modify declaration and systems, etc.;\n",
-    "6. find all patterns of the model with certain query.\n",
-    "\n",
-    "This mini project aims to help users understand the core functions and the work flow of `pyuppaal`.\n",
-    "\n",
-    "- [ReadTheDocs](https://pyuppaal.readthedocs.io/en/latest/index.html)\n",
-    "- [Github](https://github.com/Jack0Chan/pyuppaal)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "\n",
-    "## Installation\n",
-    "\n",
-    "`pip install pyuppaal`"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## Before Coding\n",
-    "\n",
-    "Remember to set the `verifyta_path` in your first line of code.\n",
-    "\n",
-    "```python\n",
-    "\n",
-    "pyuppaal.set_verifyta_path(\"your/path/to/verifyta.exe\")\n",
-    "\n",
-    "```"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## PipeNet - A simple example\n",
-    "\n",
-    "Pyuppaal is designed as a tool to solve partially observable systems and provide counter examples for safety properties. With this purpose, pyuppaal provides a simple interface to create and manipulate UPPAAL models. The following example shows how to create a simple model and how to check if a given property is satisfied.\n",
-    "\n",
-    "We will use [pyuppaal_demo_PipeNet.xml](TBD) as an example model in the following usage examples to help understand how `pyuppaal` works."
+    "We will use [pyuppaal_demo_PipeNet.xml](TBD) as an example to help understand how `pauppaal` can contribute to scientific research."
    ]
   },
   {
@@ -81,7 +30,7 @@
     "\n",
     "As shown in the figure below, the guard on the edge is the falling time for each path, e.g., if a ball goes through hidden_path1, it will take `T1_Min` to `T1_Max` seconds.\n",
     "\n",
-    "<img src=pipeNetModel.png width=550 />"
+    "<img src=https://raw.githubusercontent.com/Jack0Chan/pyuppaal/main/src/tests/figs/pipeNetModel.png width=550 />"
    ]
   },
   {
@@ -103,14 +52,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "pattern: ['input_ball', 'hidden_path1', 'hidden_path3', 'exit1', 'input_ball', 'hidden_path1', 'hidden_path4', 'exit2']\n"
+     "ename": "FileNotFoundError",
+     "evalue": "[Errno 2] No such file or directory: 'demo_PipeNet.xml'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mFileNotFoundError\u001b[0m                         Traceback (most recent call last)",
+      "\u001b[1;32mc:\\Users\\ccc\\Documents\\GitHub\\pyuppaal\\src\\tests\\Doc_MiniProject_PipeNet.ipynb Cell 5\u001b[0m in \u001b[0;36m<cell line: 7>\u001b[1;34m()\u001b[0m\n\u001b[0;32m      <a href='vscode-notebook-cell:/c%3A/Users/ccc/Documents/GitHub/pyuppaal/src/tests/Doc_MiniProject_PipeNet.ipynb#X10sZmlsZQ%3D%3D?line=3'>4</a>\u001b[0m pyu\u001b[39m.\u001b[39mset_verifyta_path(VERIFYTA_PATH)\n\u001b[0;32m      <a href='vscode-notebook-cell:/c%3A/Users/ccc/Documents/GitHub/pyuppaal/src/tests/Doc_MiniProject_PipeNet.ipynb#X10sZmlsZQ%3D%3D?line=5'>6</a>\u001b[0m \u001b[39m# Load the `xml` model\u001b[39;00m\n\u001b[1;32m----> <a href='vscode-notebook-cell:/c%3A/Users/ccc/Documents/GitHub/pyuppaal/src/tests/Doc_MiniProject_PipeNet.ipynb#X10sZmlsZQ%3D%3D?line=6'>7</a>\u001b[0m pipeNet \u001b[39m=\u001b[39m pyu\u001b[39m.\u001b[39;49mUModel(\u001b[39m\"\u001b[39;49m\u001b[39mdemo_PipeNet.xml\u001b[39;49m\u001b[39m\"\u001b[39;49m)\n\u001b[0;32m      <a href='vscode-notebook-cell:/c%3A/Users/ccc/Documents/GitHub/pyuppaal/src/tests/Doc_MiniProject_PipeNet.ipynb#X10sZmlsZQ%3D%3D?line=7'>8</a>\u001b[0m \u001b[39m# save as a new file in order not to overwrite current file\u001b[39;00m\n\u001b[0;32m      <a href='vscode-notebook-cell:/c%3A/Users/ccc/Documents/GitHub/pyuppaal/src/tests/Doc_MiniProject_PipeNet.ipynb#X10sZmlsZQ%3D%3D?line=8'>9</a>\u001b[0m pipeNet \u001b[39m=\u001b[39m pipeNet\u001b[39m.\u001b[39msave_as(\u001b[39m\"\u001b[39m\u001b[39mdemo_PipeNet_new.xml\u001b[39m\u001b[39m\"\u001b[39m)\n",
+      "File \u001b[1;32mc:\\users\\ccc\\documents\\github\\pyuppaal\\src\\pyuppaal\\umodel.py:26\u001b[0m, in \u001b[0;36mUModel.__init__\u001b[1;34m(self, model_path, auto_save)\u001b[0m\n\u001b[0;32m     19\u001b[0m \u001b[39m\"\"\"_summary_\u001b[39;00m\n\u001b[0;32m     20\u001b[0m \n\u001b[0;32m     21\u001b[0m \u001b[39mArgs:\u001b[39;00m\n\u001b[0;32m     22\u001b[0m \u001b[39m    model_path (str): _description_\u001b[39;00m\n\u001b[0;32m     23\u001b[0m \u001b[39m    auto_save (bool, optional): whether auto save the model after each operation. Defaults to True.\u001b[39;00m\n\u001b[0;32m     24\u001b[0m \u001b[39m\"\"\"\u001b[39;00m\n\u001b[0;32m     25\u001b[0m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39m__model_path: \u001b[39mstr\u001b[39m \u001b[39m=\u001b[39m model_path\n\u001b[1;32m---> 26\u001b[0m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39m__element_tree: ET\u001b[39m.\u001b[39mElementTree \u001b[39m=\u001b[39m ET\u001b[39m.\u001b[39;49mElementTree(\n\u001b[0;32m     27\u001b[0m     file\u001b[39m=\u001b[39;49m\u001b[39mself\u001b[39;49m\u001b[39m.\u001b[39;49mmodel_path)\n\u001b[0;32m     28\u001b[0m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39m__root_elem: ET\u001b[39m.\u001b[39mElement \u001b[39m=\u001b[39m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39m__element_tree\u001b[39m.\u001b[39mgetroot()\n\u001b[0;32m     29\u001b[0m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39mauto_save: \u001b[39mbool\u001b[39m \u001b[39m=\u001b[39m auto_save\n",
+      "File \u001b[1;32mc:\\Users\\ccc\\anaconda3\\lib\\xml\\etree\\ElementTree.py:540\u001b[0m, in \u001b[0;36mElementTree.__init__\u001b[1;34m(self, element, file)\u001b[0m\n\u001b[0;32m    538\u001b[0m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39m_root \u001b[39m=\u001b[39m element \u001b[39m# first node\u001b[39;00m\n\u001b[0;32m    539\u001b[0m \u001b[39mif\u001b[39;00m file:\n\u001b[1;32m--> 540\u001b[0m     \u001b[39mself\u001b[39;49m\u001b[39m.\u001b[39;49mparse(file)\n",
+      "File \u001b[1;32mc:\\Users\\ccc\\anaconda3\\lib\\xml\\etree\\ElementTree.py:569\u001b[0m, in \u001b[0;36mElementTree.parse\u001b[1;34m(self, source, parser)\u001b[0m\n\u001b[0;32m    567\u001b[0m close_source \u001b[39m=\u001b[39m \u001b[39mFalse\u001b[39;00m\n\u001b[0;32m    568\u001b[0m \u001b[39mif\u001b[39;00m \u001b[39mnot\u001b[39;00m \u001b[39mhasattr\u001b[39m(source, \u001b[39m\"\u001b[39m\u001b[39mread\u001b[39m\u001b[39m\"\u001b[39m):\n\u001b[1;32m--> 569\u001b[0m     source \u001b[39m=\u001b[39m \u001b[39mopen\u001b[39;49m(source, \u001b[39m\"\u001b[39;49m\u001b[39mrb\u001b[39;49m\u001b[39m\"\u001b[39;49m)\n\u001b[0;32m    570\u001b[0m     close_source \u001b[39m=\u001b[39m \u001b[39mTrue\u001b[39;00m\n\u001b[0;32m    571\u001b[0m \u001b[39mtry\u001b[39;00m:\n",
+      "\u001b[1;31mFileNotFoundError\u001b[0m: [Errno 2] No such file or directory: 'demo_PipeNet.xml'"
      ]
     }
    ],
@@ -149,8 +105,9 @@
    "source": [
     "The `Input` and `Observation` template created by `pyuppaal`. The cache file `*_pattern.xml` can be found in the same directory of the input model.\n",
     "<br><br>\n",
-    "<img src=pipeNetInput.png width=300 />\n",
-    "<img src=pipeNetObserver.png width=350 />\n",
+    "<img src=https://raw.githubusercontent.com/Jack0Chan/pyuppaal/main/src/tests/figs/pipeNetInput.png width=300 />\n",
+    "<img src=https://raw.githubusercontent.com/Jack0Chan/pyuppaal/main/src/tests/figs/pipeNetObserver.png width=350 />\n",
+    "<img src=https://raw.githubusercontent.com/Jack0Chan/pyuppaal/main/src/tests/figs/pipeNetModel.png width=350 />\n",
     "<br><br>\n",
     "In This example, we know the exact time of the inputs & observations, and thus `lower_bounds == upper_bounds`. If you are not sure about the exact time, or you just want to add uncertainty, e.g., the first ball goes from `Exit1` at gclk $\\in$ [490, 510], you can just set the lower bound to 490, and the upper bound to 510."
    ]
@@ -204,7 +161,7 @@
     "1. The first observation at `Exit1` is suggested by the red line. \n",
     "2. The second observation at `Exit2` is suggested by 2 the green and yellow line, meaning there are two possible patterns for this observation.\n",
     "   \n",
-    "<img src=pipeNetPatterns.png width=550 />"
+    "<img src=https://raw.githubusercontent.com/Jack0Chan/pyuppaal/main/src/tests/figs/pipeNetPatterns.png width=550 />"
    ]
   },
   {
@@ -235,7 +192,7 @@
    "source": [
     "While extracting all patterns, pyuppaal constructs Monitors based on historical patterns. The figure below shows one of the monitors constructed by pyuppaal. You can get more details from the cache file `*_pattern.xml` that is in the same directory of the input model.\n",
     "\n",
-    "<img src=pipeNetMonitor1.png width=100% />"
+    "<img src=https://raw.githubusercontent.com/Jack0Chan/pyuppaal/main/src/tests/figs/pipeNetMonitor1.png width=100% />"
    ]
   },
   {
