--- a/src/tests/Doc_Readme.ipynb
+++ b/src/tests/Doc_Readme.ipynb
@@ -6,8 +6,7 @@
    "source": [
     "# Introduction\n",
     "\n",
-    "- [ReadTheDocs](https://pyuppaal.readthedocs.io/en/latest/index.html)\n",
-    "- [Github](https://github.com/Jack0Chan/pyuppaal)\n",
+    "[![Documentation Status](https://readthedocs.org/projects/pyuppaal/badge/?version=latest)](https://pyuppaal.readthedocs.io/en/latest/?badge=latest)    [![Licence](https://img.shields.io/github/license/jack0chan/pyuppaal)](https://opensource.org/licenses/mit-license.php)    [![](https://img.shields.io/badge/github-Jack0Chan-blue)](https://github.com/Jack0Chan)    [![](https://img.shields.io/badge/group-HCPS-blue)](https://www.yuque.com/hcps) \n",
     "\n",
     "`pyuppaal` is a research tool that helps you do most things that you can do with UPPAAL GUI. Basic coding flow is:\n",
     "\n",
@@ -15,7 +14,7 @@
     "2. set the query, just like you edit the queries in UPPAAL GUI;\n",
     "3. verify a model with the query and options (e.g., shortest path), just like you click the \"Verify\" button in UPPAAL GUI.\n",
     "\n",
-    "In addition to the above, you can also\n",
+    "In addition to the above functions, you can also\n",
     "\n",
     "- load a .xtr trace, and get the formatted trace data;\n",
     "- modify templates, declaration and systems;\n",
@@ -23,11 +22,7 @@
     "- find all patterns of the model with certain query.\n",
     "- [todo] analyze the *SMC* simulation results. \n",
     "\n",
-    "We have also provided \n",
-    "\n",
-    "1. a [Quickstart_link] section to help you get familiar with the basic usage of `pyuppaal`.\n",
-    "\n",
-    "2. a [MiniProject_link] section to help you get a inner sight of the core fuction and workflow of `pauppaal`."
+    "A [MiniProject](https://github.com/Jack0Chan/pyuppaal/blob/main/src/tests/Doc_MiniProject_PipeNet.ipynb) is provided to help understand how `pauppaal` can contribute to scientific research."
    ]
   },
   {
@@ -61,7 +56,7 @@
     "\n",
     "Lets take the following model P1 with query `A[] not deadlock` as the example. You can download this file via [this_link].\n",
     "\n",
-    "<img src=demo.png width=250 />"
+    "<img src=https://raw.githubusercontent.com/Jack0Chan/pyuppaal/main/src/tests/figs/demo.png width=250 />"
    ]
   },
   {
@@ -103,7 +98,7 @@
     "\n",
     "The red line is pattern1, and the green line is pattern2.\n",
     "\n",
-    "<img src=demo_patterns.png width=250 />"
+    "<img src=https://raw.githubusercontent.com/Jack0Chan/pyuppaal/main/src/tests/figs/demo_patterns.png width=250 />"
    ]
   },
   {
@@ -206,23 +201,6 @@
     "An example communication graph of a complex model in [MiniProject_PipeNet] is shown below:\n",
     "\n",
     "img"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "# Advanced Usage\n",
-    "\n",
-    "You can also edit the `.xml` with pyuppaal, including\n",
-    "\n",
-    "1. set declaration, queries and system;\n",
-    "2. remove template by name;\n",
-    "3. add built-in templates such as Input, Observer, Monitor, etc.;\n",
-    "\n",
-    "We have provided 2 miniprojects that help you use advanced method of pyuppaal for scientific research.\n",
-    "\n",
-    "[MiniProject_PipeNet], and [MiniProject_Pedestrain]."
    ]
   },
   {
