--- a/src/tests/Doc_MiniProject_PipeNet.ipynb
+++ b/src/tests/Doc_MiniProject_PipeNet.ipynb
@@ -103,7 +103,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -117,7 +117,7 @@
    "source": [
     "import pyuppaal as pyu\n",
     "# set verifyta path\n",
-    "VERIFYTA_PATH = \"uppaal\\\\Win_Linux-uppaal64-4.1.26\\\\bin-Windows\\\\verifyta.exe\"\n",
+    "VERIFYTA_PATH = \"D:\\\\uppaal\\\\bin-Windows\\\\verifyta.exe\"\n",
     "pyu.set_verifyta_path(VERIFYTA_PATH)\n",
     "\n",
     "# Load the `xml` model\n",
@@ -166,7 +166,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -177,7 +177,10 @@
       "graph TD\n",
       "PipeNet\n",
       "Input\n",
-      "Observer```\n"
+      "Observer\n",
+      "Input--input_ball-->PipeNet\n",
+      "PipeNet--exit2-->Observer\n",
+      "PipeNet--exit1-->Observer```\n"
      ]
     }
    ],
@@ -292,7 +295,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3.9.12 ('base')",
+   "display_name": "Python 3.10.0 ('uppaal-controller')",
    "language": "python",
    "name": "python3"
   },
@@ -306,12 +309,12 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.12"
+   "version": "3.10.0"
   },
   "orig_nbformat": 4,
   "vscode": {
    "interpreter": {
-    "hash": "cbab80897c756e21206e83b1602264f7bed4b229d7a86fb97552ee165cb35ec2"
+    "hash": "56566df51fada5dbe94783a4cf73a4d7ff5e19d113ce2a7b25aa204aee2829c7"
    }
   }
  },
