Continue to merge branch 'main' into api_adjust

--- a/src/tests/Doc_MiniProject_PipeNet.ipynb
+++ b/src/tests/Doc_MiniProject_PipeNet.ipynb
@@ -52,7 +52,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -116,7 +116,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -125,15 +125,15 @@
      "text": [
       "```mermaid\n",
       "graph TD\n",
-      "PipeNet\n",
-      "Input\n",
-      "Observer```\n"
+      "Input--input_ball-->PipeNet\n",
+      "PipeNet--exit1,exit2-->Observer\n",
+      "```\n"
      ]
     }
    ],
    "source": [
     "# visualize via https://mermaid.live/\n",
-    "cg = pipeNet.get_communication_graph(is_beautify=False)\n",
+    "cg = pipeNet.get_communication_graph()\n",
     "print(cg)"
    ]
   },
@@ -159,7 +159,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
