更新模型和文档

--- a/src/tests/Doc_MiniProject_PipeNet.ipynb
+++ b/src/tests/Doc_MiniProject_PipeNet.ipynb
@@ -30,7 +30,7 @@
     "\n",
     "As shown in the figure below, the guard on the edge is the falling time for each path, e.g., if a ball goes through hidden_path1, it will take `T1_Min` to `T1_Max` seconds.\n",
     "\n",
-    "<img src=https://raw.githubusercontent.com/Jack0Chan/pyuppaal/main/src/tests/figs/pipeNetModel.png width=500 />"
+    "<img src=https://raw.githubusercontent.com/Jack0Chan/pyuppaal/main/src/tests/figs/pipeNetModel.png width=400 />"
    ]
   },
   {
@@ -52,7 +52,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -111,12 +111,14 @@
    "source": [
     "### 4. Visualize the Architecture\n",
     "\n",
-    "You can visualize the architecture by getting the communication graph in [mermaid](https://mermaid.live/) format. "
+    "You can visualize the architecture by getting the communication graph in [mermaid](https://mermaid.live/) format. \n",
+    "\n",
+    "[![](https://mermaid.ink/img/pako:eNpVjs0KwjAQhF-l7Lk56DEHT714UUGPC7JttjaQpCHdiFL67kYo_pxmmG8GZoZuNAwaboniUF0aDCcb-cCCYR9iLnJsJ053TmuglH3LtSXnlNp92qtRih9WtoV8d39o84OgBs_JkzXlwYyhqhBkYM8IuljDPWUnCBiWUqUs4_kZOtCSMteQoyHhxlL57kH35CZeXq-ESg8?type=png)](https://mermaid.live/edit#pako:eNpVjs0KwjAQhF-l7Lk56DEHT714UUGPC7JttjaQpCHdiFL67kYo_pxmmG8GZoZuNAwaboniUF0aDCcb-cCCYR9iLnJsJ053TmuglH3LtSXnlNp92qtRih9WtoV8d39o84OgBs_JkzXlwYyhqhBkYM8IuljDPWUnCBiWUqUs4_kZOtCSMteQoyHhxlL57kH35CZeXq-ESg8)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -125,15 +127,18 @@
      "text": [
       "```mermaid\n",
       "graph TD\n",
+      "PipeNet\n",
+      "Input\n",
+      "Observer\n",
       "Input--input_ball-->PipeNet\n",
-      "PipeNet--exit1,exit2-->Observer\n",
-      "```\n"
+      "PipeNet--exit2-->Observer\n",
+      "PipeNet--exit1-->Observer```\n"
      ]
     }
    ],
    "source": [
     "# visualize via https://mermaid.live/\n",
-    "cg = pipeNet.get_communication_graph()\n",
+    "cg = pipeNet.get_communication_graph(is_beautify=False)\n",
     "print(cg)"
    ]
   },
@@ -154,12 +159,12 @@
     "1. The first observation at `Exit1` is suggested by the red line. \n",
     "2. The second observation at `Exit2` is suggested by 2 the green and yellow line, meaning there are two possible patterns for this observation.\n",
     "   \n",
-    "<img src=https://raw.githubusercontent.com/Jack0Chan/pyuppaal/main/src/tests/figs/pipeNetPatterns.png width=400 />"
+    "<img src=https://raw.githubusercontent.com/Jack0Chan/pyuppaal/main/src/tests/figs/pipeNetPatterns.png width=300 />"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -197,14 +202,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "pattern: ['input_ball', 'hidden_path1', 'hidden_path3', 'exit1', 'input_ball', 'hidden_path1', 'hidden_path4', 'exit2']\n"
+      "pattern: ['input_ball', 'hidden_path1', 'hidden_path3', 'exit1', 'input_ball', 'hidden_path1', 'hidden_path4', 'exit2']\n",
+      "```mermaid\n",
+      "graph TD\n",
+      "PipeNet\n",
+      "Input\n",
+      "Observer\n",
+      "Input--input_ball-->PipeNet\n",
+      "PipeNet--exit2-->Observer\n",
+      "PipeNet--exit1-->Observer```\n",
+      "pattern1 ['input_ball', 'hidden_path1', 'hidden_path3', 'exit1', 'input_ball', 'hidden_path1', 'hidden_path4', 'exit2']\n",
+      "pattern2 ['input_ball', 'hidden_path1', 'hidden_path3', 'exit1', 'input_ball', 'hidden_path2', 'hidden_path5', 'exit2']\n"
      ]
     }
    ],
