--- a/src/tests/Doc_Readme.ipynb
+++ b/src/tests/Doc_Readme.ipynb
@@ -22,7 +22,7 @@
     "- find all patterns of the model with certain query.\n",
     "- [todo] analyze the *SMC* simulation results. \n",
     "\n",
-    "A [MiniProject_PipeNet](https://github.com/Jack0Chan/pyuppaal/blob/main/src/tests/Doc_MiniProject_PipeNet.ipynb) is provided to help understand how `pauppaal` can contribute to scientific research."
+    "A [MiniProject_PipeNet](https://github.com/Jack0Chan/pyuppaal/blob/main/src/tests/Doc_MiniProject_PipeNet.ipynb) is provided to help understand how `pyppaal` can contribute to scientific research."
    ]
   },
   {
