--- a/src/tests/Doc_Readme.ipynb
+++ b/src/tests/Doc_Readme.ipynb
@@ -22,7 +22,7 @@
     "- find all patterns of the model with certain query.\n",
     "- [todo] analyze the *SMC* simulation results. \n",
     "\n",
-    "A [MiniProject_PipeNet](https://github.com/Jack0Chan/pyuppaal/blob/main/src/tests/Doc_MiniProject_PipeNet.ipynb) is provided to help understand how `pyppaal` can contribute to scientific research."
+    "A [MiniProject_PipeNet](https://pyuppaal.readthedocs.io/en/latest/README.html#mini-project-pipenet) is provided to help understand how `pyppaal` can contribute to scientific research."
    ]
   },
   {
@@ -31,12 +31,11 @@
    "source": [
     "# Quickstart\n",
     "\n",
-    "## Installation\n",
-    "To install `pyuppaal`, simply run this simple command:\n",
+    "## 1. Installation\n",
     "\n",
     "`pip install pyuppaal`\n",
     "\n",
-    "## Before Coding\n",
+    "## 2. Before Coding\n",
     "\n",
     "Remember to set the `verifyta_path` in your first line of code.\n",
     "\n",
@@ -52,7 +51,7 @@
    "metadata": {},
    "source": [
     "\n",
-    "## Verify a Model, and Get the Verifycation Result\n",
+    "## 3. Verify a Model\n",
     "\n",
     "Lets take the following model P1 with query `A[] not deadlock` as the example. You can download this file via [this_link].\n",
     "\n",
@@ -152,7 +151,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Verify Models with Multi-threads"
+    "## 4. Verify with Multi-threads"
    ]
   },
   {
@@ -194,11 +193,11 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Get Communication Graph\n",
+    "## 5. Get Communication Graph\n",
     "\n",
     "For models with multiple processes, you can use `pyuppaal.get_communication_graph(model_path)` or `umod.get_communication_graph()` method to visualize the sturcture of the model.\n",
     "\n",
-    "An example communication graph of a complex model in [MiniProject_PipeNet](https://github.com/Jack0Chan/pyuppaal/blob/main/src/tests/Doc_MiniProject_PipeNet.ipynb) is shown below:\n",
+    "An example communication graph of a complex model in [MiniProject_PipeNet](https://pyuppaal.readthedocs.io/en/latest/README.html#mini-project-pipenet) is shown below:\n",
     "\n",
     "[![](https://mermaid.ink/img/pako:eNpVjs0KwjAQhF-l7Lk56DEHT714UUGPC7JttjaQpCHdiFL67kYo_pxmmG8GZoZuNAwaboniUF0aDCcb-cCCYR9iLnJsJ053TmuglH3LtSXnlNp92qtRih9WtoV8d39o84OgBs_JkzXlwYyhqhBkYM8IuljDPWUnCBiWUqUs4_kZOtCSMteQoyHhxlL57kH35CZeXq-ESg8?type=png)](https://mermaid.live/edit#pako:eNpVjs0KwjAQhF-l7Lk56DEHT714UUGPC7JttjaQpCHdiFL67kYo_pxmmG8GZoZuNAwaboniUF0aDCcb-cCCYR9iLnJsJ053TmuglH3LtSXnlNp92qtRih9WtoV8d39o84OgBs_JkzXlwYyhqhBkYM8IuljDPWUnCBiWUqUs4_kZOtCSMteQoyHhxlL57kH35CZeXq-ESg8)"
    ]
