--- a/src/tests/Doc_MiniProject_PipeNet.ipynb
+++ b/src/tests/Doc_MiniProject_PipeNet.ipynb
@@ -1,6 +1,7 @@
 {
  "cells": [
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -10,6 +11,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -21,6 +23,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -34,6 +37,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -52,21 +56,70 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "pattern: ['input_ball', 'hidden_path1', 'hidden_path3', 'exit1', 'input_ball', 'hidden_path1', 'hidden_path4', 'exit2']\n"
+      "pattern: ['input_ball', 'hidden_path1', 'hidden_path3', 'exit1', 'input_ball', 'hidden_path1', 'hidden_path4', 'exit2']\n",
+      "trace: State [0]: ['PipeNet.Idle', 'Input._id8', 'Observer._id11']\n",
+      "global_variables [0]: None\n",
+      "Clock_constraints [0]: [t(0) - gclk ≤ 0; t(0) - PipeNet.t ≤ 0; t(0) - Input.input_clk ≤ 0; t(0) - Observer.input_clk ≤ 0; gclk - PipeNet.t ≤ 0; PipeNet.t - Input.input_clk ≤ 0; Input.input_clk - Observer.input_clk ≤ 0; Observer.input_clk - t(0) ≤ 0; ]\n",
+      "transitions [0]: input_ball: Input -> ['PipeNet']; Input._id8 -> Input._id9; PipeNet.Idle -> PipeNet.Cross1; \n",
+      "-----------------------------------\n",
+      "State [1]: ['PipeNet.Cross1', 'Input._id9', 'Observer._id11']\n",
+      "global_variables [1]: None\n",
+      "Clock_constraints [1]: [t(0) - gclk ≤ 0; t(0) - PipeNet.t ≤ 0; t(0) - Input.input_clk ≤ 0; t(0) - Observer.input_clk ≤ 0; gclk - t(0) ≤ 500; gclk - PipeNet.t ≤ 0; PipeNet.t - Input.input_clk ≤ 0; Input.input_clk - Observer.input_clk ≤ 0; Observer.input_clk - gclk ≤ 0; ]\n",
+      "transitions [1]: hidden_path1: PipeNet -> []; PipeNet.Cross1 -> PipeNet.Cross2; \n",
+      "-----------------------------------\n",
+      "State [2]: ['PipeNet.Cross2', 'Input._id9', 'Observer._id11']\n",
+      "global_variables [2]: None\n",
+      "Clock_constraints [2]: [t(0) - gclk ≤ 0; t(0) - PipeNet.t ≤ 0; t(0) - Input.input_clk ≤ 0; t(0) - Observer.input_clk ≤ 0; gclk - t(0) ≤ 500; gclk - PipeNet.t ≤ 300; gclk - Input.input_clk ≤ 0; PipeNet.t - gclk ≤ -200; Input.input_clk - Observer.input_clk ≤ 0; Observer.input_clk - gclk ≤ 0; ]\n",
+      "transitions [2]: hidden_path3: PipeNet -> []; PipeNet.Cross2 -> PipeNet.Exit1; \n",
+      "-----------------------------------\n",
+      "State [3]: ['PipeNet.Exit1', 'Input._id9', 'Observer._id11']\n",
+      "global_variables [3]: None\n",
+      "Clock_constraints [3]: [t(0) - gclk ≤ 0; t(0) - PipeNet.t ≤ -200; t(0) - Input.input_clk ≤ 0; t(0) - Observer.input_clk ≤ 0; gclk - t(0) ≤ 500; gclk - Input.input_clk ≤ 0; PipeNet.t - gclk ≤ -200; Input.input_clk - Observer.input_clk ≤ 0; Observer.input_clk - gclk ≤ 0; ]\n",
+      "transitions [3]: exit1: PipeNet -> ['Observer']; PipeNet.Exit1 -> PipeNet.Reset; Observer._id11 -> Observer._id12; \n",
+      "-----------------------------------\n",
+      "State [4]: ['PipeNet.Reset', 'Input._id9', 'Observer._id12']\n",
+      "global_variables [4]: None\n",
+      "Clock_constraints [4]: [t(0) - gclk ≤ -500; t(0) - PipeNet.t ≤ -200; t(0) - Input.input_clk ≤ 0; t(0) - Observer.input_clk ≤ 0; gclk - Input.input_clk ≤ 0; PipeNet.t - t(0) ≤ 300; Input.input_clk - Observer.input_clk ≤ 0; Observer.input_clk - t(0) ≤ 500; ]\n",
+      "transitions [4]: None: PipeNet.Reset -> PipeNet.Idle\n",
+      "-----------------------------------\n",
+      "State [5]: ['PipeNet.Idle', 'Input._id9', 'Observer._id12']\n",
+      "global_variables [5]: None\n",
+      "Clock_constraints [5]: [t(0) - gclk ≤ -500; t(0) - PipeNet.t ≤ 0; t(0) - Input.input_clk ≤ 0; t(0) - Observer.input_clk ≤ 0; gclk - t(0) ≤ 1000; gclk - PipeNet.t ≤ 300; gclk - Input.input_clk ≤ 0; PipeNet.t - gclk ≤ -200; Input.input_clk - Observer.input_clk ≤ 0; Observer.input_clk - gclk ≤ 0; ]\n",
+      "transitions [5]: input_ball: Input -> ['PipeNet']; Input._id9 -> Input.pass; PipeNet.Idle -> PipeNet.Cross1; \n",
+      "-----------------------------------\n",
+      "State [6]: ['PipeNet.Cross1', 'Input.pass', 'Observer._id12']\n",
+      "global_variables [6]: None\n",
+      "Clock_constraints [6]: [t(0) - gclk ≤ -1000; t(0) - PipeNet.t ≤ 0; t(0) - Input.input_clk ≤ 0; t(0) - Observer.input_clk ≤ 0; gclk - t(0) ≤ 1550; gclk - PipeNet.t ≤ 1000; PipeNet.t - Input.input_clk ≤ -1000; Input.input_clk - Observer.input_clk ≤ 0; Observer.input_clk - gclk ≤ 0; ]\n",
+      "transitions [6]: hidden_path1: PipeNet -> []; PipeNet.Cross1 -> PipeNet.Cross2; \n",
+      "-----------------------------------\n",
+      "State [7]: ['PipeNet.Cross2', 'Input.pass', 'Observer._id12']\n",
+      "global_variables [7]: None\n",
+      "Clock_constraints [7]: [t(0) - gclk ≤ 0; t(0) - PipeNet.t ≤ 0; t(0) - Input.input_clk ≤ 0; t(0) - Observer.input_clk ≤ 0; gclk - t(0) ≤ 1550; gclk - PipeNet.t ≤ 1300; gclk - Input.input_clk ≤ 0; PipeNet.t - gclk ≤ -1200; Input.input_clk - Observer.input_clk ≤ 0; Observer.input_clk - gclk ≤ 0; ]\n",
+      "transitions [7]: hidden_path4: PipeNet -> []; PipeNet.Cross2 -> PipeNet.Exit2; \n",
+      "-----------------------------------\n",
+      "State [8]: ['PipeNet.Exit2', 'Input.pass', 'Observer._id12']\n",
+      "global_variables [8]: None\n",
+      "Clock_constraints [8]: [t(0) - gclk ≤ 0; t(0) - PipeNet.t ≤ -200; t(0) - Input.input_clk ≤ 0; t(0) - Observer.input_clk ≤ 0; gclk - t(0) ≤ 1550; gclk - PipeNet.t ≤ 1300; gclk - Input.input_clk ≤ 0; PipeNet.t - t(0) ≤ 300; PipeNet.t - gclk ≤ -1200; Input.input_clk - Observer.input_clk ≤ 0; Observer.input_clk - gclk ≤ 0; ]\n",
+      "transitions [8]: exit2: PipeNet -> ['Observer']; PipeNet.Exit2 -> PipeNet.Reset; Observer._id12 -> Observer.pass; \n",
+      "-----------------------------------\n",
+      "State [9]: ['PipeNet.Reset', 'Input.pass', 'Observer.pass']\n",
+      "global_variables [9]: None\n",
+      "Clock_constraints [9]: [t(0) - gclk ≤ -1550; t(0) - PipeNet.t ≤ -250; t(0) - Input.input_clk ≤ 0; t(0) - Observer.input_clk ≤ 0; gclk - Input.input_clk ≤ 0; PipeNet.t - t(0) ≤ 300; Input.input_clk - Observer.input_clk ≤ 0; Observer.input_clk - t(0) ≤ 1550; ]\n",
+      "\n"
      ]
     }
    ],
    "source": [
     "import pyuppaal as pyu\n",
     "# set verifyta path\n",
-    "VERIFYTA_PATH = \"uppaal\\\\Win_Linux-uppaal64-4.1.26\\\\bin-Windows\\\\verifyta.exe\"\n",
+    "VERIFYTA_PATH = \"C:\\\\Users\\\\T1\\\\Documents\\\\GitHub\\\\mcvsfd\\\\Win_Linux-uppaal64-4.1.26\\\\bin-Windows\\\\verifyta.exe\"\n",
     "pyu.set_verifyta_path(VERIFYTA_PATH)\n",
     "\n",
     "# Load the `xml` model\n",
@@ -80,19 +133,22 @@
     "observations = pyu.TimedActions(actions=['exit1', 'exit2'], lb=[500, 1550], ub=[500, 1550])\n",
     "# Add input template.\n",
     "pipeNet.add_input_template(inputs)\n",
+    "\n",
+    "# Focused Actions is xxxxxxxxx(if this comment is not completed, please report the issue :>, thanks)\n",
+    "fc = ['exit1', 'exit2', 'exit3']\n",
     "# Add observation template.\n",
-    "pipeNet.add_observer_template(observations)\n",
+    "pipeNet.add_observer_template(observations, focused_actions=fc)\n",
     "\n",
     "# Query whether the model can simulate the inputs & observations\n",
-    "pipeNet.set_queries('E<> Observer.pass')\n",
+    "pipeNet.queries = 'E<> Observer.pass'\n",
     "# Get one possible trace.\n",
     "trace = pipeNet.easy_verify()\n",
     "print(\"pattern:\", trace.untime_pattern)\n",
-    "# Too long to show. Run it by yourself :)\n",
-    "# print(\"trace:\", trace)"
+    "print(\"trace:\", trace)"
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -106,6 +162,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -118,7 +175,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -131,6 +188,7 @@
       "Input\n",
       "Observer\n",
       "Input--input_ball-->PipeNet\n",
+      "PipeNet--exit3-->Observer\n",
       "PipeNet--exit2-->Observer\n",
       "PipeNet--exit1-->Observer```\n"
      ]
@@ -146,11 +204,6 @@
    "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
-   "source": []
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
    "source": [
     "### 5. Find all patterns\n",
     "\n",
@@ -164,7 +217,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -181,10 +234,12 @@
     "traces = pipeNet.find_all_patterns()\n",
     "# print patterns.\n",
     "for i, trace in enumerate(traces):\n",
-    "    print(f'pattern{i+1}', trace.untime_pattern)"
+    "    print(f'pattern{i+1}', trace.untime_pattern)\n",
+    "assert len(traces)==2"
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -194,6 +249,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -202,7 +258,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -216,6 +272,7 @@
       "Input\n",
       "Observer\n",
       "Input--input_ball-->PipeNet\n",
+      "PipeNet--exit3-->Observer\n",
       "PipeNet--exit2-->Observer\n",
       "PipeNet--exit1-->Observer```\n",
       "pattern1 ['input_ball', 'hidden_path1', 'hidden_path3', 'exit1', 'input_ball', 'hidden_path1', 'hidden_path4', 'exit2']\n",
@@ -226,7 +283,10 @@
    "source": [
     "import pyuppaal as pyu\n",
     "# set verifyta path\n",
-    "VERIFYTA_PATH = \"uppaal\\\\Win_Linux-uppaal64-4.1.26\\\\bin-Windows\\\\verifyta.exe\"\n",
+    "# 原来的 PATH\n",
+    "# VERIFYTA_PATH = \"uppaal\\\\Win_Linux-uppaal64-4.1.26\\\\bin-Windows\\\\verifyta.exe\"\n",
+    "VERIFYTA_PATH = \"C:\\\\Users\\\\T1\\\\Documents\\\\GitHub\\\\mcvsfd\\\\Win_Linux-uppaal64-4.1.26\\\\bin-Windows\\\\verifyta.exe\"\n",
+    "\n",
     "pyu.set_verifyta_path(VERIFYTA_PATH)\n",
     "\n",
     "# Load the `xml` model\n",
@@ -237,14 +297,16 @@
     "# Define the input.\n",
     "inputs = pyu.TimedActions(actions=['input_ball', 'input_ball'], lb=[0, 1000], ub=[0, 1000])\n",
     "# Define the observation.\n",
+    "# observations = pyu.TimedActions(actions=['exit1', 'exit2'], lb=[500, 1550], ub=[500, 1550])\n",
     "observations = pyu.TimedActions(actions=['exit1', 'exit2'], lb=[500, 1550], ub=[500, 1550])\n",
     "# Add input template.\n",
     "pipeNet.add_input_template(inputs)\n",
     "# Add observation template.\n",
-    "pipeNet.add_observer_template(observations)\n",
+    "# raise ValueError(\"这里别忘了添加focused actions\")\n",
+    "pipeNet.add_observer_template(observations, focused_actions=['exit1', 'exit2', 'exit3'])\n",
     "\n",
     "# Query whether the model can simulate the inputs & observations\n",
-    "pipeNet.set_queries('E<> Observer.pass')\n",
+    "pipeNet.queries = 'E<> Observer.pass'\n",
     "# Get one possible trace.\n",
     "trace = pipeNet.easy_verify()\n",
     "print(\"pattern:\", trace.untime_pattern)\n",
@@ -279,7 +341,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.12"
+   "version": "3.9.5"
   },
   "orig_nbformat": 4,
   "vscode": {
