--- a/src/tests/Doc_Readme.ipynb
+++ b/src/tests/Doc_Readme.ipynb
@@ -1,6 +1,7 @@
 {
  "cells": [
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -26,6 +27,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -47,6 +49,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -60,25 +63,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "['Options for the verification:\\n  Generating no trace\\n  Search order is breadth first\\n  Using conservative space optimisation\\n  Seed is 1668171327\\n  State space representation uses minimal constraint systems\\n\\x1b[2K\\nVerifying formula 1 at /nta/queries/query[1]/formula\\n\\x1b[2K -- Formula is NOT satisfied.\\n']\n"
+      "['Options for the verification:\\n  Generating no trace\\n  Search order is breadth first\\n  Using conservative space optimisation\\n  Seed is 1688351691\\n  State space representation uses minimal constraint systems\\n\\x1b[2K\\nVerifying formula 1 at /nta/queries/query[1]/formula\\n\\x1b[2K -- Formula is satisfied.\\n']\n"
      ]
     }
    ],
    "source": [
     "import pyuppaal as pyu\n",
     "\n",
-    "VERIFYTA_PATH = \"uppaal\\\\Win_Linux-uppaal64-4.1.26\\\\bin-Windows\\\\verifyta.exe\"\n",
+    "# 这个path已经调整过了, 和之前不一样，加了前缀\n",
+    "# yangls 之前写的 join 和  ROOT_DIR 可能会影响这里\n",
+    "VERIFYTA_PATH = \"C:\\\\Users\\\\T1\\\\Documents\\\\GitHub\\\\mcvsfd\\\\Win_Linux-uppaal64-4.1.26\\\\bin-Windows\\\\verifyta.exe\"\n",
     "# set verifyta path\n",
     "pyu.set_verifyta_path(VERIFYTA_PATH)\n",
     "\n",
     "demo_path = 'demo.xml'\n",
+    "# 这个path已经调整过了, 和之前不一样，加了前缀\n",
+    "# demo_path = 'C:\\\\Users\\\\T1\\\\Documents\\\\GitHub\\\\pyuppaal_hcps\\\\src\\\\tests_integration\\\\demo.xml'\n",
     "\n",
     "# verify and return the terminal result\n",
     "terminal_res = pyu.verify(demo_path)\n",
@@ -90,6 +97,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -102,14 +110,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "broadcast channels:  ['a', 'd', 'b', 'c']\n",
+      "broadcast channels:  ['c', 'd', 'b', 'a']\n",
       "queries:  ['E<> P1.pass']\n",
       "\n",
       " State [0]: ['P1.start']\n",
@@ -133,9 +141,14 @@
    ],
    "source": [
     "# save as a new file because find_all_patterns will modify the file\n",
-    "umod = umod.save_as('demo_new.xml')\n",
+    "# 以下原来这行报错了，说是 umod UNdefined\n",
+    "# umod = umod.save_as('demo_new.xml')\n",
+    "\n",
+    "# 以下这两行放到上面一个块中\n",
+    "# umod = pyu.UModel.new('demo_new.xml')\n",
+    "# umod = pyu.UModel.save_as(umod, 'demo_new.xml')\n",
     "# set the queries of the xml model.\n",
-    "umod.set_queries('E<> P1.pass')\n",
+    "umod.queries ='E<> P1.pass'\n",
     "\n",
     "print(\"broadcast channels: \", umod.broadcast_chan)\n",
     "print(\"queries: \", umod.queries)\n",
@@ -144,10 +157,13 @@
     "# find all patterns\n",
     "all_patterns = umod.find_all_patterns()\n",
     "for i, pattern in enumerate(all_patterns):\n",
-    "    print(f'pattern{i+1}: ', pattern.untime_pattern)"
+    "    print(f'pattern{i+1}: ', pattern.untime_pattern)\n",
+    "    \n",
+    "# 因为上一个块有错，所以跑出来结果不对"
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -163,8 +179,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Verify with for loop, time usage 8.65420126914978\n",
-      "Verify with multi-threads, time usage 1.9333720207214355\n"
+      "Verify with for loop, time usage 7.326006650924683\n",
+      "Verify with multi-threads, time usage 1.1816058158874512\n"
      ]
     }
    ],
@@ -190,6 +206,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -203,6 +220,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": []
@@ -224,7 +242,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.12"
+   "version": "3.9.5"
   },
   "orig_nbformat": 4,
   "vscode": {
