--- a/src/test_integration/Demo - PipeNet.ipynb
+++ b/src/test_integration/Demo - PipeNet.ipynb
@@ -5,9 +5,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Mini Project - PipeNet\n",
+    "# Demo - PipeNet (find_all_patterns)\n",
     "\n",
-    "We will use [demo_PipeNet.xml](https://github.com/Jack0Chan/pyuppaal/blob/main/stc/test-integration/demo_PipeNet.xml) as an example to help understand how `pauppaal` can contribute to scientific research **partially observable** system."
+    "We will use [demo_PipeNet.xml](https://github.com/Jack0Chan/pyuppaal/blob/main/src/test_integration/demo_PipeNet.xml) as an example to help understand how `pauppaal` can contribute to scientific research **partially observable** system."
    ]
   },
   {
@@ -33,7 +33,7 @@
     "\n",
     "As shown in the figure below, the guard on the edge is the falling time for each path, e.g., if a ball goes through hidden_path1, it will take `T1_Min` to `T1_Max` seconds.\n",
     "\n",
-    "<img src=https://raw.githubusercontent.com/Jack0Chan/pyuppaal/main/stc/test-integration/figs/pipeNetModel.png width=400 />"
+    "<img src=https://raw.githubusercontent.com/Jack0Chan/pyuppaal/main/src/test_integration/figs/pipeNetModel.png width=400 />"
    ]
   },
   {
@@ -155,26 +155,12 @@
    "source": [
     "The `Input` and `Observation` template created by `pyuppaal`. The cache file `*_pattern.xml` can be found in the same directory of the input model.\n",
     "<br><br>\n",
-    "<img src=https://raw.githubusercontent.com/Jack0Chan/pyuppaal/main/stc/test-integration/figs/pipeNetInput.png width=300 />\n",
-    "<img src=https://raw.githubusercontent.com/Jack0Chan/pyuppaal/main/stc/test-integration/figs/pipeNetObserver.png width=350 />\n",
-    "<img src=https://raw.githubusercontent.com/Jack0Chan/pyuppaal/main/stc/test-integration/figs/pipeNetModel.png width=350 />\n",
+    "<img src=https://raw.githubusercontent.com/Jack0Chan/pyuppaal/main/src/test_integration/figs/pipeNetInput.png width=300 />\n",
+    "<img src=https://raw.githubusercontent.com/Jack0Chan/pyuppaal/main/src/test_integration/figs/pipeNetObserver.png width=350 />\n",
+    "<img src=https://raw.githubusercontent.com/Jack0Chan/pyuppaal/main/src/test_integration/figs/pipeNetModel.png width=350 />\n",
     "<br><br>\n",
     "In This example, we know the exact time of the inputs & observations, and thus `lower_bounds == upper_bounds`. If you are not sure about the exact time, or you just want to add uncertainty, e.g., the first ball goes from `Exit1` at gclk $\\in$ [490, 510], you can just set the lower bound to 490, and the upper bound to 510."
    ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### 4. Advanced Operation of SimTrace"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   },
   {
    "attachments": {},
@@ -227,7 +213,7 @@
     "1. The first observation at `Exit1` is suggested by the red line. \n",
     "2. The second observation at `Exit2` is suggested by 2 the green and yellow line, meaning there are two possible patterns for this observation.\n",
     "   \n",
-    "<img src=https://raw.githubusercontent.com/Jack0Chan/pyuppaal/main/stc/test-integration/figs/pipeNetPatterns.png width=300 />"
+    "<img src=https://raw.githubusercontent.com/Jack0Chan/pyuppaal/main/src/test_integration/figs/pipeNetPatterns.png width=300 />"
    ]
   },
   {
@@ -256,7 +242,7 @@
     "print()\n",
     "assert len(traces)==2\n",
     "\n",
-    "# alternative method\n",
+    "# alternative method with iterator\n",
     "all_patterns_iter =  pipeNet.find_all_patterns_iter()\n",
     "traces = list(all_patterns_iter)\n",
     "for i, trace in enumerate(traces):\n",
@@ -271,7 +257,7 @@
    "source": [
     "While extracting all patterns, pyuppaal constructs Monitors based on historical patterns. The figure below shows one of the monitors constructed by pyuppaal. You can get more details from the cache file `*_pattern.xml` that is in the same directory of the input model.\n",
     "\n",
-    "<img src=https://raw.githubusercontent.com/Jack0Chan/pyuppaal/main/stc/test-integration/figs/pipeNetMonitor1.png width=100% />"
+    "<img src=https://raw.githubusercontent.com/Jack0Chan/pyuppaal/main/src/test_integration/figs/pipeNetMonitor1.png width=100% />"
    ]
   },
   {
@@ -348,7 +334,7 @@
     "for i, trace in enumerate(traces):\n",
     "    print(f'pattern{i+1}', trace.untime_pattern)\n",
     "\n",
-    "# alternative method\n",
+    "# alternative method with iterator\n",
     "all_patterns_iter =  pipeNet.find_all_patterns_iter()\n",
     "traces = list(all_patterns_iter)\n",
     "for i, trace in enumerate(traces):\n",
